--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest --coverage"
+    "test": "mocha"
   },
   "keywords": [
     "node.js",
@@ -30,11 +30,15 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-jest": "^25.2.2",
     "jest": "^27.3.0",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.13",
+    "sequelize-mock": "^0.10.2",
     "supertest": "^6.1.6"
   },
   "jest": {
