--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "authentication",
     "express"
   ],
-  "author": "bezkoder",
-  "license": "ISC",
+  "author": "Khoi Minh Vu",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
